# wordpress-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/wpx-api/: Cargo.toml
crates/wpx-api/src/: client.rs  error.rs  lib.rs  response.rs
crates/wpx-auth/: Cargo.toml
crates/wpx-auth/src/: basic.rs  lib.rs  oauth.rs  provider.rs
crates/wpx-cli/: Cargo.toml
crates/wpx-cli/src/: cli.rs  context.rs  crud.rs  dispatch.rs  main.rs
crates/wpx-cli/src/commands/: auth.rs  block.rs  block_pattern.rs  block_pattern_category.rs  block_type.rs  category.rs  comment.rs  discover.rs  fleet.rs  media.rs  menu.rs  menu_item.rs  menu_location.rs  mod.rs  page.rs  plugin.rs  post.rs  post_status.rs  post_type.rs  schema.rs  search.rs  settings.rs  sidebar.rs  tag.rs  taxonomy.rs  theme.rs  user.rs  widget.rs  widget_type.rs
crates/wpx-config/: Cargo.toml
crates/wpx-config/src/: config.rs  credentials.rs  lib.rs  profile.rs
crates/wpx-core/: Cargo.toml
crates/wpx-core/src/: error.rs  lib.rs  resource.rs
crates/wpx-core/src/resources/: block.rs  block_pattern.rs  block_pattern_category.rs  block_type.rs  category.rs  comment.rs  media.rs  menu.rs  menu_item.rs  menu_location.rs  mod.rs  page.rs  plugin.rs  post.rs  post_status.rs  post_type.rs  search_result.rs  sidebar.rs  tag.rs  taxonomy.rs  theme.rs  user.rs  widget.rs  widget_type.rs
crates/wpx-mcp/: Cargo.toml
crates/wpx-mcp/src/: lib.rs  server.rs  tools.rs
crates/wpx-output/: Cargo.toml
crates/wpx-output/src/: fields.rs  format.rs  lib.rs  render.rs
docs/: prd-content.md
