[package]
name = "wpx-api"
version.workspace = true
edition.workspace = true

[dependencies]
wpx-core = { workspace = true }
wpx-auth = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
