[package]
name = "wpx-config"
version.workspace = true
edition.workspace = true

[dependencies]
wpx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
