[package]
name = "wpx-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
wpx-core = { workspace = true }
wpx-api = { workspace = true }
wpx-auth = { workspace = true }
wpx-config = { workspace = true }
wpx-output = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
